resolve probleme commande